--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@frontity/tiny-router": "^1.4.4",
     "@frontity/wp-source": "^1.11.7",
     "frontity": "^1.17.2",
-    "frontity-chakra-theme": "./packages/frontity-chakra-theme"
+    "frontity-chakra-theme": "./packages/frontity-chakra-theme",
+    "react-icons": "^4.11.0"
   }
 }
